[metadata]
name = imaginesdk
version = 1.0.0-beta05
author = Vyro
author_email = api.imagine@vyro.ai
url = https://github.com/Vyro-ai/imagine-sdk-python
description = Python client library for Imagine API
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    = src
packages = find:
install_requires =
    requests

[options.packages.find]
where = src

[options.extras_require]
all =
    numpy
    Pillow

